# Cloud-storage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
src/: settings.py  urls.py
src/docker/: start_app.sh
src/static/css/: main.css
src/static/js/: file-list.js  main.js  upload.js
src/storage/: exceptions.py  services.py  urls.py  views.py
src/storage/templates/: file_list.html  file_navigate.html  file_upload.html
src/users/: forms.py  urls.py  views.py
src/users/templates/: base.html  index.html  login.html  register.html  search.html
src/users/tests/: test_registration.py
